# solana-project-template

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_README.md  README.md  init.json  init.sh  package.json  pnpm-lock.yaml  testing.js
.github/: .env  file-filters.yml
.github/workflows/: benchmark-summary.yml  benchmark.yml  build-programs.yml  build-rust-client.yml  create-release.yml  deploy-program.yml  main.yml  publish-js-client.yml  publish-rust-client.yml  test-js-client.yml  test-programs.yml  test-rust-client.yml
.husky/: pre-commit
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/js/bench/: _setup.ts  create.ts
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  create.test.ts  getProgram.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
configs/program-scripts/: dump.sh
configs/scripts/client/: benchmark-js.sh  format-js.sh  lint-js.sh  test-js.sh  test-rust.sh
configs/scripts/program/: build.sh  clean.sh  dump.sh  format.sh  lint.sh  test.sh
idls/: mpl_project_name.json  mpl_project_name_program.json  my_project_name.json
programs/mpl-project-name/: Cargo.toml
programs/mpl-project-name/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/mpl-project-name/tests/: create.rs
programs/my-project-name/: Cargo.toml
