[package]
name = "mpl-project-name-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program-macros = { path = "/Users/kelliott/Dev/solana-program-macros" }
solana-program-types = { path = "/Users/kelliott/Dev/solana-program-types" }
solana-program-traits = { path = "/Users/kelliott/Dev/solana-program-traits" }
borsh = "^0.10"
shank = "0.3.0"
num-derive = "^0.3"
num-traits = "^0.2"
thiserror = "^1.0"
