[package]
name = "mpl-project-name-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^1.5"
shank = "0.4.5"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "^2.3"
thiserror = "^2.0"
